--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <!-- Fonts for styling -->
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>My Portfolio</title>
-    <!-- Adjust paths to be relative -->
-    <script defer="defer" src="static/js/main.25a91735.js"></script>
-    <link href="static/css/main.49c57d2b.css" rel="stylesheet">
-</head>
-<body>
-    <div id="root"></div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"><title>My Portfolio</title><script defer="defer" src="/Personal-WEB-MyPortfolio/static/js/main.43c52f75.js"></script><link href="/Personal-WEB-MyPortfolio/static/css/main.49c57d2b.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
